--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,11 @@
 
 
 <div class="container">
+    <div class="row">
+        <div class="col-md-12" id="mySpinner">
 
+        </div>
+    </div>
     <div class="row" style="margin-top: 16px">
         <div class="col-lg-6 col-sm-12" style="padding-top: 16px;">
             <form>
